<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ModifyAssignment"
    android:weightSum="1">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AssignmentName"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="5dp"/>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/editAssignment"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AssignmentWorth"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="5dp"/>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/editWorth"
            android:layout_row="1"
            android:layout_column="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TimeSpent"
            android:id="@+id/textView4"
            android:layout_row="2"
            android:layout_column="0"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TimeSpentHours"
            android:id="@+id/textView3"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="1"
            android:id="@+id/txtAssignmentHours"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TimeSpentMinutes"
            android:id="@+id/textView5"
            android:layout_row="4"
            android:layout_column="0"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="58"
            android:id="@+id/txtAssignmentMinutes"
            android:layout_row="4"
            android:layout_column="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="+"
            android:id="@+id/btnAddAssignmentMinutes"
            android:layout_row="4"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TimeGoal"
            android:id="@+id/textView6"
            android:layout_row="5"
            android:layout_column="0"
            android:padding="5dp"
            android:paddingTop="25dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="+"
            android:id="@+id/btnAddAssignmentHours"
            android:layout_row="3"
            android:layout_column="2" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/editGoal"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AssignmentStatus"
            android:id="@+id/textView7"
            android:layout_row="6"
            android:layout_column="0"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="In-Progress"
            android:id="@+id/txtStatus"
            android:layout_row="6"
            android:layout_column="1" />

    </GridLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/DiscardAssignment"
        android:id="@+id/btnDiscard"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/SaveAssignment"
        android:id="@+id/btnSave"
        android:layout_alignTop="@+id/btnDiscard"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AssignmentDueDate"
        android:id="@+id/txtDueDate"
        android:textStyle="bold"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editDueDate"
        android:layout_alignTop="@+id/txtDueDate"
        android:layout_toEndOf="@+id/txtDueDate" />

</RelativeLayout>
